feat: 添加不带tailwindcss 的模板

--- a/template/app-tailwind/package.json.ejs
+++ b/template/app-tailwind/package.json.ejs
@@ -11,6 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@cocojs/cli": "^<%= cliVersion %>",
+    "@tailwindcss/postcss": "^4.1.14",
+    "css-loader": "^7.1.2",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.14",
     "ts-patch": "3.1.2",
     "typescript": "5.3.3"
   },
