--- a/template/lib/packages/[project-name]/package.json.ejs
+++ b/template/lib/packages/[project-name]/package.json.ejs
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "type": "module",
-  "module": "dist/bundle.esm.js",
-  "types": "dist/types/lib.d.ts",
+  "module": "dist/index.esm.js",
+  "types": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
